# AndroidOpenCVTesserartOCR

./: README.md
app/: build.gradle
app/src/androidTest/java/dem/vac/tesseractocr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  facedetector.cpp  facedetector.h  native-lib.cpp  opticalflow.cpp  opticalflow.h  testcv.cpp  testcv.h
app/src/main/java/dem/vac/tesseractocr/: MainActivity.java  TesseratCallBack.java  VaccaeOpenCVJNI.java  VaccaeSurfaceView.java  VaccaeTesserat.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/dem/vac/tesseractocr/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
